--- a/ACESSIBILIDADE.WIU/SRC/index.html
+++ b/ACESSIBILIDADE.WIU/SRC/index.html
@@ -77,6 +77,32 @@
         <button class="secaodestaque-cta btnpadrao"
            conheça os planos
         </section>
+
+        <section class="secaoDiferenciais">
+          <div class="container">
+            <ul class="diferenciais">
+              <li class="diferenciais-diferencial">
+                <h2 class="diferenciais-diferencial-titulo diferenciais-diferencial-titulo-tempo">
+                  tempo
+                </h2>
+                <p class="diferenciais-diferencial-texto">
+                  tempo e importante! trabalhamos em ritmo acelerado, atendendo rigorosamente os prazos.
+                </p>
+              </li>
+              <li class="diferenciais-diferencial">
+                <h2 class="diferenciais-diferencial-titulo diferenciais-diferencial-titulo--foco">
+                  foco
+                </h2>
+                <p class="diferenciais-diferencial-texto">
+                  focado no empreendedor, oferecemos serviços de qualidade com presoso acessiveis.
+                </p>
+              </li>
+              <li class="diferenciais-diferencial">
+                <h2 class="diferenciais-diferencial-texto"
+              </li>
+            </ul>
+          </div>
+        </section>
         
     </main>
 </body>
