--- a/ACESSIBILIDADE.WIU/SRC/index.html
+++ b/ACESSIBILIDADE.WIU/SRC/index.html
@@ -98,11 +98,16 @@
                 </p>
               </li>
               <li class="diferenciais-diferencial">
-                <h2 class="diferenciais-diferencial-texto"
+                <h2 class="diferenciais-diferencial-texto diferenciais-diferencial-titulo"
+                especialistas
+              </h2>
+            </p class"diferenciais-diferencial-texto">
+             equipe especialista, com experiencia profissionais. testamos todos os produtos antes do laçamento.
+            </p>
               </li>
             </ul>
           </div>
-        </section>
+        </section>  
         
     </main>
 </body>
